feat(`private_key`): expose `public_key` attribute
