# tools/openapi-overlay.yml
@@ -3554,6 +3554,14 @@ paths:
                     $ref: '#/components/responses/400'
                 '404':
                     description: 'Private Key not found.'
+                '422':
+                    description: 'Private Key is in use and cannot be deleted.'
+                    content:
+                        application/json:
+                            schema:
+                                properties:
+                                    message: {type: string, example: 'Private Key is in use and cannot be deleted.'}
+                                type: object
             security:
                 - bearerAuth: []
         patch:
@@ -5025,6 +5033,12 @@ components:
                 private_key:
                     type: string
                     format: private-key
+                public_key:
+                    type: string
+                    description: 'The public key of the private key.'
+                fingerprint:
+                    type: string
+                    description: 'The fingerprint of the private key.'
                 is_git_related:
                     type: boolean
                 team_id:
@@ -5032,8 +5046,6 @@ components:
                 created_at:
                     type: string
                 updated_at:
-                    type: string
-                fingerprint:
                     type: string
             type: object
         Project:
